syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message AltHedgePolicyMap {
    message PKey {
        
        TickerKey ticker = 10; // hedge target ticker
        string accnt = 11; // client enter order in this account
        string client_firm = 12; // SR assigned client firm acronym
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    TradeHedgePolicy trade_hedge_policy = 100;
    PositionHedgePolicy position_hedge_policy = 101;
    string modified_by = 102; // user who last modified this record
    SysEnvironment modified_in = 103;
    google.protobuf.Timestamp timestamp = 104; // timestamp of last modification
}


