syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message TradeHedgePolicyConfig {
    message PKey {
        
        string accnt = 10;
        string client_firm = 11;
        TradeHedgePolicy policy = 12;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    YesNo enabled = 100;
    HedgeWindow hedge_window = 101;
    HedgeAlgo hedge_algo = 102;
    string exec_brkr_algo = 103; // display name of exec broker algo (should not have spaces)
    string exec_brkr_code = 104; // required if ALT_BROKER
    string exec_bkkr_tags = 105; // key/value set of algo tags that get forwarded to exec broker on order
    YesNo can_hedge_away_executions = 106;
    string modified_by = 107; // user who last modified this record
    SysEnvironment modified_in = 108;
    google.protobuf.Timestamp timestamp = 109; // timestamp of last modification
}


